Working logic with exceptions