@@ -7,14 +7,13 @@ import com.zemoso.seeder.entity.User;
 import com.zemoso.seeder.repository.ContractRepository;
 import com.zemoso.seeder.service.ContractService;
 import com.zemoso.seeder.service.UserService;
+import com.zemoso.seeder.util.NumberUtils;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -27,38 +26,22 @@ public class ContractServiceImpl implements ContractService {
 
     @Override
     public List<ContractResponse> findAllContracts(long userId) {
-        try {
-            User user = userService.getById(userId);
-            List<Contract> contracts = contractRepository.findAllByTotalAvailableLessThan(user.getAvailableCredit());
-            return contracts.stream()
-                    .map(this::convertToResponse)
-                    .collect(Collectors.toList());
-        }catch (Exception e){
-            log.info("Exception");
-        }
-
-        return List.of();
+        User user = userService.getById(userId);
+        List<Contract> contracts = contractRepository.findAllByTotalAvailableLessThan(user.getAvailableCredit());
+        return contracts.stream()
+                .map(this::convertToResponse)
+                .toList();
     }
 
     @Override
     public Contract createNewContract(ContractDto contractDto) {
         Contract contract = modelMapper.map(contractDto, Contract.class);
+        double perPayment = (contract.getTotalAvailable() + (contract.getTotalAvailable()* contract.getRate()/100))/contract.getTermLength();
+        contract.setPerPayment(NumberUtils.roundToTwoDecimalPlaces(perPayment));
         return contractRepository.save(contract);
     }
 
-    @Override
-    public List<Contract> getAllByIds(List<Long> contractIds) {
-        return contractIds.stream()
-                .map(contractRepository::findById)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
-    }
-
     private ContractResponse convertToResponse(Contract contract) {
-        ContractResponse contractResponse = modelMapper.map(contract, ContractResponse.class);
-        double perPayment = (contract.getTotalAvailable() + (contract.getTotalAvailable()* contractResponse.getRate()/100))/contract.getTermLength();
-        contractResponse.setPerPayment(perPayment);
-        return contractResponse;
+        return modelMapper.map(contract, ContractResponse.class);
     }
 }
